<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="my_number">+380(00)000-00-00</string>
    <string name="action_settings">Settings</string>
    <string name="sim_operator_lbl">SIM Operator</string>
    <string name="sim_operator_name_lbl">SIM Operator Name</string>
    <string name="network_operator_lbl">Network Operator</string>
    <string name="network_operator_name_lbl">Network Operator Name</string>
    <string name="sim_country_lbl">SIM Country</string>
    <string name="mobile_number_lbl">Cell number</string>
    <string name="current_plan_lbl">Current plan</string>
    <string name="get_plan_btn_lbl">Get plan</string>
    <string name="current_plan">For obtaining of your current plan press GET PLAN</string>
    <string name="ussd_not_found">Sorry! For this moment we do not know USSD code of your provider to check the current plan  :(</string>
    <string name="you_can_help_ussd">You can help! Just enter USSD code which shows the name of your current mobile plan. It usually looks like *100# or similar.</string>
    <string name="error_ussd_msg">USSD code ERROR</string>

    <string name="uri_scheme">ussd</string>
    <string name="uri_authority">cd</string>
    <string name="uri_path">/</string>
    <string name="uri_param_name">uval</string>
</resources>
