<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <TextView
        android:id="@+id/get_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_number"
        android:layout_above="@+id/sim_operator_name"
        android:layout_toRightOf="@+id/text3"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sim_operator_lbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/sim_operator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_number"
        android:layout_alignTop="@+id/text3"
        android:layout_alignLeft="@+id/get_operator"
        android:layout_alignStart="@+id/get_operator" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sim_operator_name_lbl"
        android:layout_below="@+id/text2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_operator_lbl"
        android:layout_below="@+id/text3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/net_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_number"
        android:layout_alignTop="@+id/text4"
        android:layout_alignLeft="@+id/sim_operator_name"
        android:layout_alignStart="@+id/sim_operator_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_operator_name_lbl"
        android:layout_below="@+id/text4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/net_operator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_number"
        android:layout_below="@+id/net_operator"
        android:layout_alignLeft="@+id/net_operator"
        android:layout_alignStart="@+id/net_operator" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sim_country_lbl"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/get_sim_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_number"
        android:layout_alignTop="@+id/text5"
        android:layout_alignLeft="@+id/net_operator_name"
        android:layout_alignStart="@+id/net_operator_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number_lbl"
        android:layout_below="@+id/text5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/get_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_number"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignLeft="@+id/get_sim_country"
        android:layout_alignStart="@+id/get_sim_country" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_plan_btn_lbl"
        android:id="@+id/get_plan_btn"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current_plan"
        android:id="@+id/message"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
